# Revision history for Perl extension Encode.
#
# $Id: Changes,v 2.84 2016/04/11 07:17:02 dankogai Exp dankogai $
#
$Revision: 2.84 $ $Date: 2016/04/11 07:17:02 $
! Encode.xs t/cow.t
  Patched: #115540 (from_to affecting COW strings)
  https://rt.cpan.org/Ticket/Display.html?id=115540
! Encode.xs t/Encode.t t/decode.t
  Merged: RT#115168:
    [PATCH] Passing regex globals to decode() results in wrong result
  https://rt.cpan.org/Ticket/Display.html?id=115168
! Makefile.pl
  Pulled: t/encoding-locale.t fails with Test::More@0.80 or before.
  https://github.com/dankogai/p5-encode/pull/55
! Encode.pm
  Pulled: In-place modifications made explicit in docs for encode(),
  decode() and decode_utf8()
  https://github.com/dankogai/p5-encode/pull/54

2.84 2016/04/11 07:17:02
! lib/Encode/MIME/Header.pm
  Pulled: Encode::MIME::Header:
    Update description that this module is only for unstructured header
  https://github.com/dankogai/p5-encode/pull/53
! lib/Encode/MIME/Header.pm t/mime-header.t
  Pulled: Encode::MIME::Header: Fix valid_q_chars, '-' needs to be escaped
  https://github.com/dankogai/p5-encode/pull/52

2.83 2016/03/24 07:49:54
! lib/Encode/MIME/Header.pm t/mime-header.t
  Both decoder and encoder are rewritten by Pali Rohár.
  Encoder should be now fully compliant of RFC 2047.
  Decoder is less strict to be able to decode
  strings generated by old versions of this module.
  https://github.com/dankogai/p5-encode/pull/51
! t/mime-header.t
  Add more test vectors from RFC2047, pp.11-12
! lib/Encode/Supported.pod
  merge: Autrijus -> Audrey
  https://github.com/dankogai/p5-encode/pull/50

2.82 2016/02/06 20:17:24
! lib/Encode/MIME/Header.pm
  lib/Encode/MIME/Header/ISO_2022_JP.pm
  t/mime-header.t
  Reverted to 2.80 upon the request of whom submitted pull/48

2.81 2016/02/06 19:25:22
! lib/Encode/MIME/Header.pm
  lib/Encode/MIME/Header/ISO_2022_JP.pm
  t/mime-header.t
  Merged: Encode::MIME::Header: Fix decoder and rewrite encoder